--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,16 @@
-<h2>Welcome</h2>
+<h2>Welcome Home Angular Developer...!</h2>
+
+<ul class="usersList">
+    <a routerLink="users/1">
+        <li>M. Usman</li>
+    </a>
+    <a routerLink="users/2">
+        <li>M. Yasir</li>
+    </a>
+    <a routerLink="users/3">
+        <li>Abdul Rafay</li>
+    </a>
+    <a routerLink="users/4">
+        <li>Kanshif</li>
+    </a>
+</ul>
